FullQa New/src/objects/Managed_Services_Interaction__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The case associated with this interaction</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Managed Services Interactions</relationshipLabel>
        <relationshipName>Managed_Services_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interaction_Code__c</fullName>
        <inlineHelpText>Specific activity code related to this interaction</inlineHelpText>
        <label>Interaction Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CDCR - Customer data create</fullName>
                </value>
                <value>
                    <fullName>CMPN - Campaign questions – cert NOT completed/sent</fullName>
                </value>
                <value>
                    <fullName>CRLD - Customer data upload only</fullName>
                </value>
                <value>
                    <fullName>EMAIL - Email Campaign</fullName>
                </value>
                <value>
                    <fullName>HCU - Hard copy cert upload only</fullName>
                </value>
                <value>
                    <fullName>HCUP - Hard copy cert upload and process</fullName>
                </value>
                <value>
                    <fullName>MAIL - Postal Letter Campaign</fullName>
                </value>
                <value>
                    <fullName>MTEX - Meetings (External)</fullName>
                </value>
                <value>
                    <fullName>MTIN - Meetings (Internal)</fullName>
                </value>
                <value>
                    <fullName>OTBD - Outbound contacts (proactive only)</fullName>
                </value>
                <value>
                    <fullName>OTHR - Other</fullName>
                </value>
                <value>
                    <fullName>REG - Regulatory questions</fullName>
                </value>
                <value>
                    <fullName>REV - Review escalated certs</fullName>
                </value>
                <value>
                    <fullName>STAT - Questions on certificate status – certificate completed/sent</fullName>
                </value>
                <value>
                    <fullName>TRNG – Answering CertCapture usage questions</fullName>
                </value>
                <value>
                    <fullName>UPLD - Soft copy cert upload only requests</fullName>
                </value>
                <value>
                    <fullName>UPPR - Soft copy cert upload and process requests</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interaction_Overview__c</fullName>
        <inlineHelpText>Summary of the interaction</inlineHelpText>
        <label>Interaction Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Managed_Services_Engagement__c</fullName>
        <label>Managed Services Engagement</label>
        <referenceTo>Managed_Services_Engagement__c</referenceTo>
        <relationshipLabel>Managed Services Interactions</relationshipLabel>
        <relationshipName>Managed_Services_Interactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Medium__c</fullName>
        <inlineHelpText>Origin of interaction</inlineHelpText>
        <label>Medium</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <inlineHelpText>The client or the customer of a client designation</inlineHelpText>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Customer of Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Spent_on_Interaction_mins__c</fullName>
        <label>Time Spent on Interaction (mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Managed Services Interaction</label>
    <nameField>
        <displayFormat>msi{0000}</displayFormat>
        <label>Managed Services Interaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Managed Services Interactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>